update html img

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="main-info">
             <img class="img-titule" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000"
-                src="Assets/logo-new.png" width="490px" alt="">
+                src="Assets/logo-new.png" width="490px" alt="logo-new">
             <p class="descrition" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800"
                 data-aos-easing="ease-in-out">
                 Conte com nossa equipe de mecânicos altamente qualificados para diagnosticar e corrigir problemas
@@ -54,7 +54,7 @@
             </div>
         </div>
         <img class="marioeluigi" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200"
-            src="assets/logo002.png" width="450px" alt="marioandluigi">
+            src="assets/logo002.png" width="450px">
         <div class="form-mask"></div>
 
         <form class="fale" action="https://formsubmit.co/fehfeh.ff@gmail.com" method="POST">
